--- a/RedlineRestorationsLess/style.less
+++ b/RedlineRestorationsLess/style.less
@@ -259,6 +259,32 @@ body {
 	display:none;
 }
 
+.down-arrow-footer{
+	height:53px;
+	width:126px;
+	position:absolute;
+	cursor:pointer;
+	margin-left:47%;
+}
+
+.down-arrow-footer:hover{
+	background-color:@redline-red;
+	border-top:1px solid #e4636c;
+}
+
+.down-arrow-footer h6{
+	position: absolute;
+	width: 100%;
+	text-align: center;
+	margin-top: 9px;
+	color: #ffffff;
+	font-family: 'Tw Cen W01 Medium';
+	font-size: 13px;
+	text-transform: uppercase;
+	text-shadow: 0px -1px 0px rgba(0, 0, 0, 0.35);
+	display:none;
+}
+
 .bottom-button {
 	width: 27px;
 	position: absolute;
@@ -274,4 +300,164 @@ body {
 
 .otherpage{
 	position:absolute;
+}
+
+.footer{
+	position: fixed;
+	width: 100%;
+	height: 265px;
+	border-top: 7px solid #d91f2d;
+	bottom: -265px;
+	background-image:url('images/footer-background.png');
+	z-index: 10000000000000000000;
+	color:#243942;
+}
+
+.footer-wrap{
+	width:1000px;
+	height:265px;
+	margin-left:auto;
+	margin-right:auto;
+}
+
+.footer-left{
+	width: 573px;
+	height: 240px;
+	position: relative;
+	float:left;
+	margin-right:7px;
+	border:1px solid #b2b2b2;
+	border-top:0px;
+
+}
+
+.footer-left-top {
+	height:147px;
+	width:100%;
+	position:relative;
+	border-bottom:1px solid #b2b2b2;
+}
+
+.footer-left-top img {
+	display:inline-block;
+	float:left;
+	margin-top:29px;
+	margin-left:68px;
+	margin-right:84px;
+}
+
+.footer-left-top ul {
+	-moz-column-count: 2;
+	-moz-column-gap: 0px;
+	-webkit-column-count: 2;
+	-webkit-column-gap: 5px;
+	column-count: 2;
+	column-gap: 5px;
+	width: 290px;
+	float: left;
+	display: inline-block;
+	margin-top: 30px;
+	text-transform: uppercase;
+	font-family: 'Tw Cen W01 Medium';
+	font-size: 13.5px;
+	line-height: 30px;
+}
+
+.footer-left-top ul li{
+	padding-left:19px;
+}
+
+.footer-left-top ul li:hover{
+	color:#d91f2d;
+	padding-left:0px;
+	list-style-type:disc;
+	list-style-position:inside;
+	list-style-image:url('images/footer-list-icon.png');
+}
+
+.footer-left-contact{
+	height:31px;
+	width:100%;
+	position:relative;
+	border-bottom:1px solid #b2b2b2;
+	text-transform:uppercase;
+	font-family: 'Tw Cen W01 Medium';
+	font-size:13px;
+	line-height:16px;
+	padding-top: 8px;
+	padding-left: 29px;
+}
+
+.footer-left-follow{
+	height:31px;
+	width:100%;
+	position:relative;
+	border-bottom:1px solid #b2b2b2;
+	text-transform:uppercase;
+	font-family: 'Tw Cen W01 Medium';
+	font-size:13px;
+	line-height:16px;
+	padding-top: 8px;
+	padding-left: 29px;
+}
+
+.footer-left span{
+	font-weight:normal;
+}
+
+.footer-left-copyright {
+	height:31px;
+	width:100%;
+	position:relative;
+	border-bottom:1px solid #b2b2b2;
+	padding-top: 8px;
+	padding-left: 29px;
+}
+
+.footer-left-copyright h6{
+	font-family: 'Tw Cen W01 Medium';
+	font-size:13px;
+	line-height:16px;
+	font-weight:normal;
+}
+
+.footer-right{
+	width:420px;
+	height:240px;
+	position:relative;
+	float:left;
+	border:1px solid #b2b2b2;
+	border-top:0px;
+}
+
+.footer-right-blogroll {
+	height:209px;
+	width:100%;
+	position:relative;
+	border-bottom:1px solid #b2b2b2;
+}
+
+.footer-right-design{
+	height:31px;
+	width:100%;
+	position:relative;
+	border-bottom:1px solid #b2b2b2;
+	padding-top: 8px;
+	padding-left: 29px;
+}
+
+.footer-right-design h6{
+	font-family: 'Tw Cen W01 Medium';
+	font-size:13px;
+	line-height:16px;
+	font-weight:normal;
+}
+
+.footer-right-design a {
+	color:#243942;
+	text-decoration:none;
+}
+
+.footer-right-design a:hover{
+	color:#d91f2d;
 }
