Footer stuff social stuff

--- a/RedlineRestorationsLess/style.less
+++ b/RedlineRestorationsLess/style.less
@@ -463,9 +463,9 @@ font-family: Georgia;
 .footer{
 	position: fixed;
 	width: 100%;
-	height: 500px;
+	height: 534px;
 	border-top: 7px solid #d91f2d;
-	bottom: -500px;
+	bottom: -534px;
 	background-image:url('images/footer-background.png');
 	z-index: 10000000000000000000;
 	color:#243942;
@@ -512,4 +512,107 @@ font-family: Georgia;
 
 .footer-social-tab span {
 	font-family:'Tw Cen W01 Semi Bold';
+}
+
+.footer-facebook {
+	width:100%;
+	height:139px;
+}
+
+.footer-facebook > .social-icon {
+	margin-top: 42px;
+    margin-left: 53px;
+}
+
+.footer-facebook > div {
+margin-left: 0px;
+display: inline-block;
+position: absolute;
+}
+
+.footer-twitter {
+	width:100%;
+	height:164px;
+}
+
+.footer-twitter > .social-icon {
+margin-left:47px;
+margin-top:36px;
+}
+
+.footer-twitter > iframe {
+	margin-top: 12px;
+position: absolute;
+}
+
+.footer-blog {
+	width:100%;
+	height:130px;
+}
+
+.footer-blog > .social-icon {
+margin-top:13px;
+margin-left:31px;
+}
+
+.footer-blog h4 {
+	font-family: 'Tw Cen W01 Medium';
+	font-weight: normal;
+	font-size:18px;
+	text-transform:uppercase;
+	color:#ffffff;
+	margin-left: 100px;
+margin-top: -40px;
+}
+
+.footer-blog span {
+	color:@redline-red;
+}
+
+.footer-pinterest {
+	width:100%;
+	height:163px;
+}
+
+.footer-pinterest > .social-icon {
+margin-top:93px;
+margin-left:73px;
+}
+
+.footer-youtube {
+	width:100%;
+	height:148px;
+}
+
+.footer-youtube > .social-icon {
+margin-top: 80px;
+margin-left: 52px;
+}
+
+.footer-instagram{
+	width:100%;
+	height:148px;
+}
+
+.footer-instagram > .social-icon {
+margin-left:71px;
+margin-top:77px;
+}
+
+.footer-left-bottom h6 {
+	color:#868686;
+	margin-left:30px;
+	margin-top:12px;
+	font-size:13px;
+	font-family: 'Tw Cen W01 Medium';
+font-weight: normal;
+}
+
+.footer-right-bottom h6 {
+	color:#868686;
+	margin-left:38px;
+	margin-top:12px;
+	font-size:13px;
+	font-family: 'Tw Cen W01 Medium';
+font-weight: normal;
 }
