--- a/RedlineRestorationsLess/style.less
+++ b/RedlineRestorationsLess/style.less
@@ -84,7 +84,7 @@ body {
 	text-decoration: none;
 position: absolute;
 margin-left: 150px;
-margin-top: -56px;
+margin-top: -32px;
 font-size: 16px;
 text-transform: uppercase;
 font-family: 'Tw Cen W01 Medium';
@@ -185,9 +185,21 @@ display:none;
 	width:21%;
 	height:100%;
 	right:0;
+	top:0;
 	background:@redline-blue;
 	text-align:center;
 	color:white;
+}
+
+.panel-textbar img {
+	margin-top:125px;
+	margin-bottom:60px;
+}
+
+.panel-textbar h4 {
+	font-family: 'BauerBodoniW01-RegItali';
+	font-size: 24px;
+	font-weight: normal;
 }
 
 .panel-textbar-left{
@@ -404,7 +416,7 @@ margin-right: 1%;
 	height:100%;
 	position:absolute;
 	width:78.2%;
-	right:0;
+	margin-left:21.8%;
 }
 
 .aboutus-panel-wide{
@@ -444,6 +456,69 @@ width: 525px;
 margin-left: 16px;
 font-weight: normal;
 font-family: Georgia;
+}
+
+/* Slider */
+
+.panel-one-slide-wrapper{
+	height:100%;
+	width:4000px;
+}
+
+.panel-one-slider{
+	width:1000px;
+	height:100%;
+	float:left;
+	margin:0;
+}
+
+.panel-one-slider h4 {
+	font-family: 'BauerBodoniW01-RegItali';
+font-weight: normal;
+font-size: 24px;
+position: absolute;
+margin-left: 79%;
+z-index: 1000;
+width: 210px;
+color: #ffffff;
+text-align: center;
+margin-top: 215px;
+}
+
+.panel-one-slider h5 {
+	width: 210px;
+position: absolute;
+height: 100%;
+text-align: center;
+padding-left: 10px;
+padding-right: 10px;
+padding-top: 253px;
+padding-bottom: 100px;
+font-size: 16px;
+color:white;
+z-index:1000;
+margin-left:79%;
+font-family:'Tw Cen W01 Medium';
+font-weight: normal;
+}
+
+.panel-slider-lines {
+	width: 71px;
+height: 47px;
+position: absolute;
+margin-left: 861px;
+border-top: 1px solid black;
+border-bottom: 1px solid black;
+z-index: 1000;
+margin-top: 246px;
+}
+
+.panel-slider-lines-inner {
+	width: 71px;
+height: 47px;
+position: absolute;
+border-top: 1px solid red;
+border-bottom: 1px solid red;
 }
 
 
@@ -572,12 +647,17 @@ margin-top: -40px;
 .footer-pinterest {
 	width:100%;
 	height:163px;
+	padding-left:100px;
+	padding-top:40px;
 }
 
 .footer-pinterest > .social-icon {
-margin-top:93px;
-margin-left:73px;
+margin-top:60px;
+margin-left:-30px;
+position:absolute;
 }
+
+
 
 .footer-youtube {
 	width:100%;
