--- a/RedlineRestorationsLess/style.less
+++ b/RedlineRestorationsLess/style.less
@@ -204,7 +204,7 @@ display:none;
 
 .panel-textbar-left{
 	position:absolute;
-	width:21%;
+	width:31%;
 	height:100%;
 	left:0;
 	background:@redline-blue;
@@ -221,7 +221,7 @@ display:none;
 .panel-textbar-horizontal {
 	position:absolute;
 	width:100%;
-	height:21%;
+	height:205px;
 	background-image:url('images/top-nav-background.png');
 	color:white;
 }
@@ -229,7 +229,7 @@ display:none;
 .slide-image-horizontal {
 	height:100%;
 	position:absolute;
-	height:79%;
+	height:375px;
 	bottom:0;
 }
 
@@ -306,6 +306,7 @@ display:none;
 	cursor:pointer;
 	margin-left:47%;
 	z-index:10000;
+	top:0;
 }
 
 .up-arrow-hover:hover{
@@ -415,8 +416,8 @@ margin-right: 1%;
 .aboutus-slide-image{
 	height:100%;
 	position:absolute;
-	width:78.2%;
-	margin-left:21.8%;
+	width:68.2%;
+	margin-left:31.8%;
 }
 
 .aboutus-panel-wide{
@@ -458,6 +459,56 @@ font-weight: normal;
 font-family: Georgia;
 }
 
+.panel-textbar-left img {
+	margin-top:65px;
+}
+
+.panel-textbar-left h5 {
+	width: 310px;
+height: 30px;
+text-align: center;
+font-size: 25px;
+color: white;
+z-index: 1000;
+font-family: 'BauerBodoniW01-RegItali';
+font-weight: normal;
+margin-top: 36px;
+text-transform: uppercase;
+text-shadow: 0px -1px 0px rgba(0, 0, 0, 0.5);
+}
+
+.aboutus-panel-slider-lines {
+	width: 115px;
+height: 47px;
+margin-left: 50px;
+border-top: 1px solid black;
+border-bottom: 1px solid black;
+z-index: 1000;
+margin-top: -40px;
+margin-left:auto;
+margin-right:auto;
+}
+
+.aboutus-panel-slider-lines-inner {
+	width: 115px;
+height: 47px;
+position: absolute;
+border-top: 1px solid red;
+border-bottom: 1px solid red;
+}
+
+.panel-textbar-left p {
+width: 240px;
+margin-left: auto;
+margin-right: auto;
+margin-top: 30px;
+text-align: left;
+font-size: 16px;
+font-family: Georgia;
+line-height: 23px;
+letter-spacing: 1px;
+}
+
 /* Slider */
 
 .panel-one-slide-wrapper{
@@ -483,6 +534,7 @@ width: 210px;
 color: #ffffff;
 text-align: center;
 margin-top: 215px;
+text-shadow: 0px -1px 0px rgba(0, 0, 0, 0.5);
 }
 
 .panel-one-slider h5 {
@@ -521,14 +573,101 @@ border-top: 1px solid red;
 border-bottom: 1px solid red;
 }
 
+/* Homepage */
+
+.panel-textbar-horizontal h2 {
+	color: @redline-blue;
+margin-left: 100px;
+width: 180px;
+display: inline-block;
+border-right: 1px dashed @redline-blue;
+font-size: 30px;
+font-family: 'BauerBodoniW01-RegItali';
+font-weight: normal;
+text-transform: uppercase;
+line-height: 0px;
+letter-spacing: 4px;
+text-align: right;
+padding-right: 19px;
+height: 118px;
+margin-top:86px;
+}
+
+.panel-textbar-horizontal span {
+	color:@redline-red;
+	line-height: 65px;
+}
+
+.panel-textbar-horizontal h4 {
+	display:inline-block;
+	color:@redline-blue;
+width: 525px;
+margin-left: 16px;
+font-weight: normal;
+font-family: Georgia;
+font-size:16px;
+line-height:24px;
+}
+
+/* Panel three homepage */
+
+.panel-textbar-wide h4 {
+	font-family: 'BauerBodoniW01-RegItali';
+font-weight: normal;
+font-size: 24px;
+position: absolute;
+z-index: 1000;
+width: 100%;
+color: #ffffff;
+text-align: center;
+text-shadow: 0px -1px 0px rgba(0, 0, 0, 0.5);
+}
+
+.panel-textbar-wide h6 {
+	width: 100%;
+position: absolute;
+height: 100%;
+text-align: center;
+padding-left: 10px;
+padding-right: 10px;
+padding-bottom: 100px;
+font-size: 16px;
+color:white;
+z-index:1000;
+font-family:'Tw Cen W01 Medium';
+font-weight: normal;
+}
+
+.bot-panel-slider-lines {
+	width: 71px;
+height: 47px;
+position: absolute;
+margin-left: 861px;
+border-top: 1px solid black;
+border-bottom: 1px solid black;
+z-index: 1000;
+margin-top: 246px;
+}
+
+.bot-panel-slider-lines-inner {
+	width: 71px;
+height: 47px;
+position: absolute;
+border-top: 1px solid red;
+border-bottom: 1px solid red;
+}
+
+/* Contact Us Page */
+
+#google-map {
+	top: 25%;
+	height: 75%;
+	width:100%;
+}
 
 /* General Attributes */
 
-.homepage{
-	position:absolute;
-}
-
-.otherpage{
+.homepage,.contactpage,.otherpage,.aboutuspage{
 	position:absolute;
 }
 
@@ -685,7 +824,7 @@ margin-top:77px;
 	margin-top:12px;
 	font-size:13px;
 	font-family: 'Tw Cen W01 Medium';
-font-weight: normal;
+	font-weight: normal;
 }
 
 .footer-right-bottom h6 {
@@ -694,5 +833,5 @@ font-weight: normal;
 	margin-top:12px;
 	font-size:13px;
 	font-family: 'Tw Cen W01 Medium';
-font-weight: normal;
+	font-weight: normal;
 }
